--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file-templates",
+  "name": "file-templates-n",
   "displayName": "File Templates",
   "description": "Create reusable file and directory templates",
   "version": "0.0.1",
