--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-templates-n",
-  "displayName": "File Templates",
+  "displayName": "++File Templates++",
   "description": "Create reusable file and directory templates",
   "version": "0.0.1",
   "preview": true,
