--- a/package.json
+++ b/package.json
@@ -1,99 +1,99 @@
 {
-  "name": "file-templates-n",
-  "displayName": "File/Directory Templates",
-  "description": "Create reusable file and directory templates",
-  "version": "0.0.5",
-  "preview": true,
-  "publisher": "danieltodor",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/danieltodor/vscode-file-templates"
-  },
-  "engines": {
-    "vscode": "^1.94.0"
-  },
-  "categories": [
-    "Snippets",
-    "Other"
-  ],
-  "activationEvents": [],
-  "main": "./dist/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "file-templates.createTemplate",
-        "title": "Create",
-        "category": "File/Directory Templates"
-      },
-      {
-        "command": "file-templates.openTemplate",
-        "title": "Open",
-        "category": "File/Directory Templates"
-      },
-      {
-        "command": "file-templates.renameTemplate",
-        "title": "Rename",
-        "category": "File/Directory Templates"
-      },
-      {
-        "command": "file-templates.removeTemplate",
-        "title": "Remove",
-        "category": "File/Directory Templates"
-      },
-      {
-        "command": "file-templates.useTemplate",
-        "title": "Use Template",
-        "category": "File/Directory Templates"
-      },
-      {
-        "command": "file-templates.useTemplates",
-        "title": "Use Templates",
-        "category": "File/Directory Templates"
-      }
+    "name": "file-templates-n",
+    "displayName": "File/Directory Templates",
+    "description": "Create reusable file and directory templates",
+    "version": "0.0.6",
+    "preview": false,
+    "publisher": "danieltodor",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/danieltodor/vscode-file-templates"
+    },
+    "engines": {
+        "vscode": "^1.94.0"
+    },
+    "categories": [
+        "Snippets",
+        "Other"
     ],
-    "configuration":[
-        {
-            "title": "File/Directory Templates",
-            "properties": {
-                "file-templates-n.dereferenceSymlinks": {
-                    "type": "boolean",
-                    "default": true,
-                    "description": "In case of a symlink, copy the file itself, instead of a symlink"
-                },
-                "file-templates-n.force": {
-                    "type": "boolean",
-                    "default": false,
-                    "description": "Overwrite existing files on conflict"
+    "activationEvents": [],
+    "main": "./dist/extension.js",
+    "contributes": {
+        "commands": [
+            {
+                "command": "file-templates-n.createTemplate",
+                "title": "Create",
+                "category": "File/Directory Templates"
+            },
+            {
+                "command": "file-templates-n.openTemplate",
+                "title": "Open",
+                "category": "File/Directory Templates"
+            },
+            {
+                "command": "file-templates-n.renameTemplate",
+                "title": "Rename",
+                "category": "File/Directory Templates"
+            },
+            {
+                "command": "file-templates-n.removeTemplate",
+                "title": "Remove",
+                "category": "File/Directory Templates"
+            },
+            {
+                "command": "file-templates-n.useTemplate",
+                "title": "Use Template",
+                "category": "File/Directory Templates"
+            },
+            {
+                "command": "file-templates-n.useTemplates",
+                "title": "Use Templates",
+                "category": "File/Directory Templates"
+            }
+        ],
+        "configuration": [
+            {
+                "title": "File/Directory Templates",
+                "properties": {
+                    "file-templates-n.dereferenceSymlinks": {
+                        "type": "boolean",
+                        "default": true,
+                        "description": "In case of a symlink, copy the file itself, instead of a symlink"
+                    },
+                    "file-templates-n.force": {
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Overwrite existing files on conflict"
+                    }
                 }
             }
-        }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "npm run check-types && npm run lint && node esbuild.js",
-    "watch": "npm-run-all -p watch:*",
-    "watch:esbuild": "node esbuild.js --watch",
-    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
-    "check-types": "tsc --noEmit",
-    "lint": "eslint src",
-    "test": "vscode-test"
-  },
-  "devDependencies": {
-    "@types/vscode": "^1.94.0",
-    "@types/mocha": "^10.0.8",
-    "@types/node": "20.x",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.11.1",
-    "esbuild": "^0.24.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.6.2",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
-  }
+        ]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run package",
+        "compile": "npm run check-types && npm run lint && node esbuild.js",
+        "watch": "npm-run-all -p watch:*",
+        "watch:esbuild": "node esbuild.js --watch",
+        "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+        "package": "npm run check-types && npm run lint && node esbuild.js --production",
+        "compile-tests": "tsc -p . --outDir out",
+        "watch-tests": "tsc -p . -w --outDir out",
+        "pretest": "npm run compile-tests && npm run compile && npm run lint",
+        "check-types": "tsc --noEmit",
+        "lint": "eslint src",
+        "test": "vscode-test"
+    },
+    "devDependencies": {
+        "@types/vscode": "^1.94.0",
+        "@types/mocha": "^10.0.8",
+        "@types/node": "20.x",
+        "@typescript-eslint/eslint-plugin": "^8.7.0",
+        "@typescript-eslint/parser": "^8.7.0",
+        "eslint": "^9.11.1",
+        "esbuild": "^0.24.0",
+        "npm-run-all": "^4.1.5",
+        "typescript": "^5.6.2",
+        "@vscode/test-cli": "^0.0.10",
+        "@vscode/test-electron": "^2.4.1"
+    }
 }
